testcases/error/vardecl.cpp
// unsigned unsigned int a;
// short long int b;
// float double c;

// int (int), (char);
// int (*);

const cc;

int x, f(int a);
int (Fuck(int))[10];
int (Shit[10])(int);
int (What(int))(char);